# anospp-analysis

./: .gitignore  README.md  environment.yml  pyproject.toml  setup.py
anospp_analysis/: __init__.py  agg.py  iplot.py  nn.py  plasm.py  prep.py  qc.py  test_functions.py  test_functions_vae.py  util.py  utils.py  vae.py
conda.recipe/: meta.yaml
gotz_tanzania/run_46965/plasm/: plasmodium_haplotypes.tsv  plasmodium_predictions.tsv  summary_stats.txt
test_data/plasmv1/: plasmomito_P1P2_DB.ndb  plasmomito_P1P2_DB.nhr  plasmomito_P1P2_DB.nin  plasmomito_P1P2_DB.njs  plasmomito_P1P2_DB.nsq
test_data/ref_v1.0/: plasmomito_P1P2_DB_v1.0.ndb  plasmomito_P1P2_DB_v1.0.nhr  plasmomito_P1P2_DB_v1.0.nin  plasmomito_P1P2_DB_v1.0.njs  plasmomito_P1P2_DB_v1.0.not  plasmomito_P1P2_DB_v1.0.nsq  plasmomito_P1P2_DB_v1.0.nto  species_colours.csv
